# email-archiver

./: .gitignore  CLAUDE.md  README.md  abonnements.json  pyproject.toml
docs/superpowers/plans/: 2026-04-30-invoice-extraction.md  2026-04-30-unified-classifier.md
docs/superpowers/specs/: 2026-04-30-invoice-extraction-design.md  2026-04-30-unified-classifier-design.md
email_archiver/: __init__.py  __main__.py  archiver.py  classifier.py  cli.py  config.py  imap_client.py  invoice_downloader.py  invoice_scanner.py  logging_setup.py  organizer.py
tests/: test_classifier.py  test_cli.py  test_imap_client.py  test_invoice_downloader.py  test_invoice_scanner.py
